--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,24 @@
     text-align: center;
     font-size: 35px;
     margin-top: 20%;
+    margin: 20% auto;
+    padding: 0 30px;
 }
 
 .App-title {
-    font-size: 50px;
+    font-size: 30px;
+    margin: 10px auto;
+}
+
+.clock {
+    font-size: 22px;
+    margin: 10px auto;
+}
+
+.form-inline .form-control {
+    display: inline-block;
+    width: auto;
+    vertical-align: middle;
 }
 
 .Clock-days, .Clock-hours, .Clock-minutes, .Clock-seconds {
@@ -16,4 +30,13 @@
 .Deadline-input {
     font-size: 25px;
     margin: 5px;
+}
+
+@media (min-width: 900px) {
+    .App-title {
+        font-size: 40px;
+    }
+    .clock {
+        font-size: 30px;
+    }
 }
